--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,61 @@
-asn1crypto==0.24.0
-atomicwrites==1.2.1
-attrs==18.2.0
-bcrypt==3.1.4
-certifi==2018.8.24
-cffi==1.11.5
-click==6.7
-cryptography==2.4.2
-Flask==1.0.2
-idna==2.8
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-more-itertools==4.3.0
-mysql-connector-python==8.0.13
-pluggy==0.8.0
-protobuf==3.6.1
-py==1.7.0
-pycparser==2.19
-PyJWT==1.7.0
-pytest==4.0.1
-six==1.11.0
-SQLAlchemy==1.2.14
-Werkzeug==0.14.1
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-64
+absl-py=0.8.0=pypi_0
+asn1crypto=0.24.0=pypi_0
+astor=0.8.0=pypi_0
+atomicwrites=1.2.1=pypi_0
+attrs=18.2.0=pypi_0
+bcrypt=3.1.4=pypi_0
+ca-certificates=2019.5.15=1
+certifi=2018.8.24=pypi_0
+cffi=1.11.5=pypi_0
+click=6.7=pypi_0
+cryptography=2.4.2=pypi_0
+flask=1.0.2=pypi_0
+gast=0.2.2=pypi_0
+google-pasta=0.1.7=pypi_0
+grpcio=1.23.0=pypi_0
+h5py=2.9.0=pypi_0
+idna=2.8=pypi_0
+itsdangerous=0.24=pypi_0
+jinja2=2.10=pypi_0
+keras=2.2.5=pypi_0
+keras-applications=1.0.8=pypi_0
+keras-preprocessing=1.1.0=pypi_0
+libcxx=4.0.1=hcfea43d_1
+libcxxabi=4.0.1=hcfea43d_1
+libedit=3.1.20181209=hb402a30_0
+libffi=3.2.1=h475c297_4
+markdown=3.1.1=pypi_0
+markupsafe=1.0=pypi_0
+more-itertools=4.3.0=pypi_0
+mysql-connector-python=8.0.13=pypi_0
+ncurses=6.1=h0a44026_1
+numpy=1.17.1=pypi_0
+openssl=1.1.1c=h1de35cc_1
+pip=19.2.2=py36_0
+pluggy=0.8.0=pypi_0
+protobuf=3.6.1=pypi_0
+py=1.7.0=pypi_0
+pycparser=2.19=pypi_0
+pyjwt=1.7.0=pypi_0
+pytest=4.0.1=pypi_0
+python=3.6.9=h359304d_0
+pyyaml=5.1.2=pypi_0
+readline=7.0=h1de35cc_5
+scipy=1.3.1=pypi_0
+setuptools=41.0.1=py36_0
+six=1.11.0=pypi_0
+sqlalchemy=1.2.14=pypi_0
+sqlite=3.29.0=ha441bb4_0
+tensorboard=1.14.0=pypi_0
+tensorflow=1.14.0=pypi_0
+tensorflow-estimator=1.14.0=pypi_0
+termcolor=1.1.0=pypi_0
+tk=8.6.8=ha441bb4_0
+werkzeug=0.14.1=pypi_0
+wheel=0.33.4=py36_0
+wrapt=1.11.2=pypi_0
+xz=5.2.4=h1de35cc_4
+zlib=1.2.11=h1de35cc_3
